# backup-setuper

./: .gitignore  LICENSE  README.md  git-push.sh  pyproject.toml  requirements.txt  secrets.example.yaml
machines/: kumabox.example.yaml  silentbox.example.yaml
scripts/: op-sync.sh
src/backup_setuper/: __main__.py  bootstrap.py  cli.py  config.py  remote.py  render.py
src/backup_setuper/templates/: backup-restic.sh.j2  cron.txt.j2  prune-restic.sh.j2  rclone.conf.j2
tests/: conftest.py  test_bootstrap.py  test_config.py  test_remote.py  test_remote_known_hosts.py  test_render.py
